doc: jvm